[package]
name = "bmp38x-ya"
version = "0.1.0"
edition = "2021"

authors = ["fordauthor42@gmail.com"]
repository = "https://github.com/marvinrobot42/bmp38x-ya.git"
description = "BMP38x driver (384, 388, 390)" 
documentation = "https://docs.rs/bmp38x-ya"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT OR Apache-2.0"
keywords = ["driver", "sensor", "i2c", "bmp384"]
categories = ["embedded", "no-std"]
publish = true
exclude = [
    ".gitattributes",
    ".drone.yml",
    ".pre-commit-config.yaml",
    "Makefile.toml",
]

[features]
default = ["sync"]
sync = []
async = ["embedded-hal-async"]

[dependencies]
log = { version = "0.4.22", default-features = false }
embedded-hal = {version = "1.0"}
embedded-hal-async = { version = "1.0", optional = true }
maybe-async-cfg = "0.2"
libm = { version = "0.2.8" }
bitfield = "0.14.0"
const-builder = "0.1.5"


[build-dependencies]
embuild = "=0.31.4"
